add final slide

--- a/slides.html
+++ b/slides.html
@@ -3264,7 +3264,21 @@ test_that(&quot;Produces at least 52 instances of every day in 2020&quot;, {
 ## OK:       7
 ## Failed:   0
 ## Warnings: 0
-## Skipped:  0</pre></article></slide>
+## Skipped:  0</pre>
+
+</article></slide><slide class=""><hgroup><h2>Contact</h2></hgroup><article  id="contact">
+
+<h3>Jack Hannah</h3>
+
+<p><a href='mailto:jack.hannah1@nhs.net' title=''>Email</a> <a href='https://github.com/jackhannah95' title=''>GitHub</a></p>
+
+<h3>Transforming Publishing Programme</h3>
+
+<p><a href='mailto:nss.isdtransformingpublishing@nhs.net' title=''>Email</a> <a href='https://github.com/NHS-NSS-transforming-publications' title=''>GitHub</a> <a href='https://www.isdscotland.org/Products-and-Services/Transforming-Publishing-Programme/' title=''>Website</a></p>
+
+<h3>ISD</h3>
+
+<p><a href='mailto:NSS.isdSHIS@nhs.net' title=''>Email</a> <a href='https://github.com/Health-SocialCare-Scotland' title=''>GitHub</a> <a href='https://www.isdscotland.org/' title=''>Website</a></p></article></slide>
 
 
   <slide class="backdrop"></slide>
